[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "pythonSeleniumActionBot"
version = "1.0.0"
description = "Python selenium Wrapper"
readme = "README.md"
authors = [{ name = "Real Python", email = "info@realpython.com" }]
[project.urls]
Homepage = "https://github.com/srinivasaraojyothi/seleniumpythonactionbot.git"