[metadata]
name = pyseleniumbot
version = 1.0.7
author = srinivasaraojyothi
author_email = srinivasaraojyothi@gmail.com
description = pu
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/srinivasaraojyothi/seleniumpythonactionbot.git
project_urls =
    Bug Tracker = https://github.com/srinivasaraojyothi/seleniumpythonactionbot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pyseleniumbot/src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pyseleniumbot/src